--- a/style.css
+++ b/style.css
@@ -6,3 +6,31 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body{
+    background:lightblue;
+}
+
+
+.start_btn,
+ .info_box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+
+}
+
+/*Start Quix Button Styling */
+.start_btn button{
+    font-size: 25px;
+    font-weight: 500;
+    color: black;
+    padding: 15px 30px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    background: white;
+    cursor: pointer;
+
+}
