--- a/style.css
+++ b/style.css
@@ -34,3 +34,29 @@ body{
     cursor: pointer;
 
 }
+
+.info_box{
+    width: 540px;
+    background: white;
+    border-radius: 5px;
+}
+
+.info_box .info_title{
+    height: 60px;
+    width: 100%;
+    border-bottom: 1px solid lightgray;
+    display: flex;
+    align-items: center;
+    padding: 0 35px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.info_box .info_list{
+    padding: 15px 35px;
+}
+
+.info_box .info_list .info{
+    margin: 5px 0;
+    font-size: 17;
+}
