--- a/style.css
+++ b/style.css
@@ -60,3 +60,8 @@ body{
     margin: 5px 0;
     font-size: 17;
 }
+
+.info_box .info_list .info span{
+    font-weight: 600;
+    color: lightblue;
+}
