--- a/style.css
+++ b/style.css
@@ -60,8 +60,39 @@ body{
     margin: 5px 0;
     font-size: 17;
 }
-
-.info_box .info_list .info span{
+/* 20 sec span*/
+ .info_list .info span{
     font-weight: 600;
     color: lightblue;
+}
+/* Exit Quiz and Continue button*/
+.info_box .buttons{
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content:flex-end;
+    padding: 0 35px;
+    border-top: 1px solid lightgray;
+}
+
+.info_box .buttons button{
+    margin: o 5px;
+    height: 40px;
+    width: 100px;
+    border: 1px solid black;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.buttons button.restart{
+    color: black;
+    border-color: black;
+}
+
+.buttons button.quit{
+    color: black;
+    border-color: black;
 }
