--- a/style.css
+++ b/style.css
@@ -6,16 +6,19 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
+/*Body of Page*/
 body{
     background:lightblue;
 }
 
-
+::selection{
+    color: #fff;
+    background: #007bff;
+}
     .start_btn,
     .info_box,
     .quiz_box {
-    position: absolute;
+    position:absolute;
     top: 50%;
     left: 50%;
     transform:translate(-50%, -50%);
@@ -37,10 +40,13 @@ body{
 }
 
 .info_box{
-    display: none;
     width: 540px;
-    background: white;
+    background: #fff;
     border-radius: 5px;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
 }
 
 .info_box .info_title{
@@ -50,6 +56,7 @@ body{
     display: flex;
     align-items: center;
     padding: 0 35px;
+    border-radius: 5px 5px 0 0;
     font-size: 20px;
     font-weight: 600;
 }
@@ -60,7 +67,7 @@ body{
 
 .info_box .info_list .info{
     margin: 5px 0;
-    font-size: 17;
+    font-size: 17px;
 }
 /* 20 sec span*/
  .info_list .info span{
@@ -78,7 +85,7 @@ body{
 }
 
 .info_box .buttons button{
-    margin: o 5px;
+    margin: 0 5px;
     height: 40px;
     width: 100px;
     border: 1px solid black;
