Adding box showdow and modifying button.

--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ body{
 }
     .start_btn,
     .info_box,
-    .quiz_box {
+    .quiz_box,
+    .result_box {
     position:absolute;
     top: 50%;
     left: 50%;
     transform:translate(-50%, -50%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
+                0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
@@ -99,11 +102,11 @@ body{
 
 .buttons button.restart{
     color: black;
-    background: lightblue;
 }
 
 .buttons button.restart:hover{
     background: lightblue;
+    color:#fff;
 }
 
 .buttons button.quit{
