--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body{
     color:white;
     background: lightblue;
 }
-
+/*Quiz Box start*/
 .quiz_box{
     width: 550px;
     background: white;
@@ -173,3 +173,28 @@ body{
     font-size: 17px;
     user-select: none;
 }
+
+.quiz_box header .timer .timer_sec{
+    font-size: 18px;
+    font-weight: 500;
+    height: 30px;
+    width: 45px;
+    color: #fff;
+    border-radius: 5px;
+    line-height: 30px;
+    text-align: center;
+    background: #343a40;
+    border: 1px solid #343a40;
+    user-select: none;
+}
+.quiz_box header .time_line{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 3px;
+    background: #007bff;
+}
+/*Quiz Box end*/
+
+
+
