Adding sections to CSS.

--- a/style.css
+++ b/style.css
@@ -158,5 +158,18 @@ body{
     background: #007bff;
 }
 
+section{
+    padding: 25px 30px 20px 30px;
+    background: #fff;
+}
+section .que_text{
+    font-size: 25px;
+    font-weight: 600;
+}
+section .option_list{
+    padding: 20px 0px;
+    display: block;   
+}
+
 
 
