--- a/style.css
+++ b/style.css
@@ -217,5 +217,17 @@ section .option_list .option .icon{
     line-height: 24px;
 }
 
+.option_list .option .icon.tick{
+    color: #23903c;
+    border-color: #23903c;
+    background: #d4edda;
+}
+.option_list .option .icon.cross{
+    color: #a42834;
+    background: #f8d7da;
+    border-color: #a42834;
+}
+
+
 
 
