--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 /*Body of page*/
 body{
-    background: #007bff;
+    background:lightblue;
 }
 ::selection{
     color: #fff;
@@ -74,7 +74,7 @@ body{
 }
 .info_box .info-list .info span{
     font-weight: 600;
-    color: #007bff;
+    color:lightblue;
 }
 .info_box .buttons{
     height: 60px;
@@ -275,6 +275,72 @@ footer button.show{
     opacity: 1;
     pointer-events: auto;
     transform: scale(1);
+}
+
+.result_box{
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    padding: 25px 30px;
+    width: 450px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    transform: translate(-50%, -50%) scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+.result_box .icon{
+    font-size: 100px;
+    color: #007bff;
+    margin-bottom: 10px;
+}
+.result_box .complete_text{
+    font-size: 20px;
+    font-weight: 500;
+}
+.result_box .score_text span{
+    display: flex;
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: 500;
+}
+.result_box .score_text span p{
+    padding: 0 4px;
+    font-weight: 600;
+}
+.result_box .buttons{
+    display: flex;
+    margin: 20px 0;
+}
+.result_box .buttons button{
+    margin: 0 10px;
+    height: 45px;
+    padding: 0 20px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #007bff;
+    transition: all 0.3s ease;
+}
+.buttons button.restart{
+    color: #fff;
+    background: #007bff;
+}
+.buttons button.restart:hover{
+    background: #0263ca;
+}
+.buttons button.quit{
+    color: #007bff;
+    background: #fff;
+}
+.buttons button.quit:hover{
+    color: #fff;
+    background: #007bff;
 }
 
 
